; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_4437.c_generate_param.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_4437.c_generate_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @generate_param(i32* %0, i8** %1, i8** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i8** %2, i8*** %6, align 8
  store i8* null, i8** %7, align 8
  store i32 0, i32* %8, align 4
  store i32 0, i32* %9, align 4
  store i32 0, i32* %11, align 4
  store i32 0, i32* %12, align 4
  store i32 0, i32* %10, align 4
  br label %13

13:                                               ; preds = %214, %3
  %14 = load i8**, i8*** %5, align 8
  %15 = load i32, i32* %10, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8*, i8** %14, i64 %16
  %18 = load i8*, i8** %17, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %27

20:                                               ; preds = %13
  %21 = load i8**, i8*** %6, align 8
  %22 = load i32, i32* %10, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i8*, i8** %21, i64 %23
  %25 = load i8*, i8** %24, align 8
  %26 = icmp ne i8* %25, null
  br label %27

27:                                               ; preds = %20, %13
  %28 = phi i1 [ false, %13 ], [ %26, %20 ]
  br i1 %28, label %29, label %217

29:                                               ; preds = %27
  %30 = load i8**, i8*** %5, align 8
  %31 = load i32, i32* %10, align 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i8*, i8** %30, i64 %32
  %34 = load i8*, i8** %33, align 8
  %35 = call i32 @strlen(i8* %34)
  store i32 %35, i32* %11, align 4
  %36 = load i8**, i8*** %6, align 8
  %37 = load i32, i32* %10, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds i8*, i8** %36, i64 %38
  %40 = load i8*, i8** %39, align 8
  %41 = call i32 @strlen(i8* %40)
  store i32 %41, i32* %12, align 4
  %42 = load i32, i32* %11, align 4
  %43 = icmp sgt i32 %42, 127
  br i1 %43, label %44, label %47

44:                                               ; preds = %29
  %45 = load i32, i32* %8, align 4
  %46 = add nsw i32 %45, 4
  store i32 %46, i32* %8, align 4
  br label %50

47:                                               ; preds = %29
  %48 = load i32, i32* %8, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %8, align 4
  br label %50

50:                                               ; preds = %47, %44
  %51 = load i32, i32* %12, align 4
  %52 = icmp sgt i32 %51, 127
  br i1 %52, label %53, label %56

53:                                               ; preds = %50
  %54 = load i32, i32* %8, align 4
  %55 = add nsw i32 %54, 4
  store i32 %55, i32* %8, align 4
  br label %59

56:                                               ; preds = %50
  %57 = load i32, i32* %8, align 4
  %58 = add nsw i32 %57, 1
  store i32 %58, i32* %8, align 4
  br label %59

59:                                               ; preds = %56, %53
  %60 = load i8**, i8*** %5, align 8
  %61 = load i32, i32* %10, align 4
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds i8*, i8** %60, i64 %62
  %64 = load i8*, i8** %63, align 8
  %65 = call i32 @strlen(i8* %64)
  %66 = load i8**, i8*** %6, align 8
  %67 = load i32, i32* %10, align 4
  %68 = sext i32 %67 to i64
  %69 = getelementptr inbounds i8*, i8** %66, i64 %68
  %70 = load i8*, i8** %69, align 8
  %71 = call i32 @strlen(i8* %70)
  %72 = add nsw i32 %65, %71
  %73 = load i32, i32* %8, align 4
  %74 = add nsw i32 %73, %72
  store i32 %74, i32* %8, align 4
  %75 = load i8*, i8** %7, align 8
  %76 = load i32, i32* %8, align 4
  %77 = call i8* @realloc(i8* %75, i32 %76)
  store i8* %77, i8** %7, align 8
  %78 = load i8*, i8** %7, align 8
  %79 = icmp ne i8* %78, null
  br i1 %79, label %80, label %213

80:                                               ; preds = %59
  %81 = load i8**, i8*** %5, align 8
  %82 = load i32, i32* %10, align 4
  %83 = sext i32 %82 to i64
  %84 = getelementptr inbounds i8*, i8** %81, i64 %83
  %85 = load i8*, i8** %84, align 8
  %86 = call i32 @strlen(i8* %85)
  %87 = icmp sgt i32 %86, 127
  br i1 %87, label %88, label %124

88:                                               ; preds = %80
  %89 = load i32, i32* %11, align 4
  %90 = ashr i32 %89, 24
  %91 = or i32 %90, 128
  %92 = trunc i32 %91 to i8
  %93 = load i8*, i8** %7, align 8
  %94 = load i32, i32* %9, align 4
  %95 = add nsw i32 %94, 1
  store i32 %95, i32* %9, align 4
  %96 = sext i32 %94 to i64
  %97 = getelementptr inbounds i8, i8* %93, i64 %96
  store i8 %92, i8* %97, align 1
  %98 = load i32, i32* %11, align 4
  %99 = ashr i32 %98, 16
  %100 = and i32 %99, 255
  %101 = trunc i32 %100 to i8
  %102 = load i8*, i8** %7, align 8
  %103 = load i32, i32* %9, align 4
  %104 = add nsw i32 %103, 1
  store i32 %104, i32* %9, align 4
  %105 = sext i32 %103 to i64
  %106 = getelementptr inbounds i8, i8* %102, i64 %105
  store i8 %101, i8* %106, align 1
  %107 = load i32, i32* %11, align 4
  %108 = ashr i32 %107, 8
  %109 = and i32 %108, 255
  %110 = trunc i32 %109 to i8
  %111 = load i8*, i8** %7, align 8
  %112 = load i32, i32* %9, align 4
  %113 = add nsw i32 %112, 1
  store i32 %113, i32* %9, align 4
  %114 = sext i32 %112 to i64
  %115 = getelementptr inbounds i8, i8* %111, i64 %114
  store i8 %110, i8* %115, align 1
  %116 = load i32, i32* %11, align 4
  %117 = and i32 %116, 255
  %118 = trunc i32 %117 to i8
  %119 = load i8*, i8** %7, align 8
  %120 = load i32, i32* %9, align 4
  %121 = add nsw i32 %120, 1
  store i32 %121, i32* %9, align 4
  %122 = sext i32 %120 to i64
  %123 = getelementptr inbounds i8, i8* %119, i64 %122
  store i8 %118, i8* %123, align 1
  br label %132

124:                                              ; preds = %80
  %125 = load i32, i32* %11, align 4
  %126 = trunc i32 %125 to i8
  %127 = load i8*, i8** %7, align 8
  %128 = load i32, i32* %9, align 4
  %129 = add nsw i32 %128, 1
  store i32 %129, i32* %9, align 4
  %130 = sext i32 %128 to i64
  %131 = getelementptr inbounds i8, i8* %127, i64 %130
  store i8 %126, i8* %131, align 1
  br label %132

132:                                              ; preds = %124, %88
  %133 = load i8**, i8*** %6, align 8
  %134 = load i32, i32* %10, align 4
  %135 = sext i32 %134 to i64
  %136 = getelementptr inbounds i8*, i8** %133, i64 %135
  %137 = load i8*, i8** %136, align 8
  %138 = call i32 @strlen(i8* %137)
  %139 = icmp sgt i32 %138, 127
  br i1 %139, label %140, label %176

140:                                              ; preds = %132
  %141 = load i32, i32* %12, align 4
  %142 = ashr i32 %141, 24
  %143 = or i32 %142, 128
  %144 = trunc i32 %143 to i8
  %145 = load i8*, i8** %7, align 8
  %146 = load i32, i32* %9, align 4
  %147 = add nsw i32 %146, 1
  store i32 %147, i32* %9, align 4
  %148 = sext i32 %146 to i64
  %149 = getelementptr inbounds i8, i8* %145, i64 %148
  store i8 %144, i8* %149, align 1
  %150 = load i32, i32* %12, align 4
  %151 = ashr i32 %150, 16
  %152 = and i32 %151, 255
  %153 = trunc i32 %152 to i8
  %154 = load i8*, i8** %7, align 8
  %155 = load i32, i32* %9, align 4
  %156 = add nsw i32 %155, 1
  store i32 %156, i32* %9, align 4
  %157 = sext i32 %155 to i64
  %158 = getelementptr inbounds i8, i8* %154, i64 %157
  store i8 %153, i8* %158, align 1
  %159 = load i32, i32* %12, align 4
  %160 = ashr i32 %159, 8
  %161 = and i32 %160, 255
  %162 = trunc i32 %161 to i8
  %163 = load i8*, i8** %7, align 8
  %164 = load i32, i32* %9, align 4
  %165 = add nsw i32 %164, 1
  store i32 %165, i32* %9, align 4
  %166 = sext i32 %164 to i64
  %167 = getelementptr inbounds i8, i8* %163, i64 %166
  store i8 %162, i8* %167, align 1
  %168 = load i32, i32* %12, align 4
  %169 = and i32 %168, 255
  %170 = trunc i32 %169 to i8
  %171 = load i8*, i8** %7, align 8
  %172 = load i32, i32* %9, align 4
  %173 = add nsw i32 %172, 1
  store i32 %173, i32* %9, align 4
  %174 = sext i32 %172 to i64
  %175 = getelementptr inbounds i8, i8* %171, i64 %174
  store i8 %170, i8* %175, align 1
  br label %184

176:                                              ; preds = %132
  %177 = load i32, i32* %12, align 4
  %178 = trunc i32 %177 to i8
  %179 = load i8*, i8** %7, align 8
  %180 = load i32, i32* %9, align 4
  %181 = add nsw i32 %180, 1
  store i32 %181, i32* %9, align 4
  %182 = sext i32 %180 to i64
  %183 = getelementptr inbounds i8, i8* %179, i64 %182
  store i8 %178, i8* %183, align 1
  br label %184

184:                                              ; preds = %176, %140
  %185 = load i8*, i8** %7, align 8
  %186 = load i32, i32* %9, align 4
  %187 = sext i32 %186 to i64
  %188 = getelementptr inbounds i8, i8* %185, i64 %187
  %189 = load i8**, i8*** %5, align 8
  %190 = load i32, i32* %10, align 4
  %191 = sext i32 %190 to i64
  %192 = getelementptr inbounds i8*, i8** %189, i64 %191
  %193 = load i8*, i8** %192, align 8
  %194 = load i32, i32* %11, align 4
  %195 = call i32 @memcpy(i8* %188, i8* %193, i32 %194)
  %196 = load i32, i32* %11, align 4
  %197 = load i32, i32* %9, align 4
  %198 = add nsw i32 %197, %196
  store i32 %198, i32* %9, align 4
  %199 = load i8*, i8** %7, align 8
  %200 = load i32, i32* %9, align 4
  %201 = sext i32 %200 to i64
  %202 = getelementptr inbounds i8, i8* %199, i64 %201
  %203 = load i8**, i8*** %6, align 8
  %204 = load i32, i32* %10, align 4
  %205 = sext i32 %204 to i64
  %206 = getelementptr inbounds i8*, i8** %203, i64 %205
  %207 = load i8*, i8** %206, align 8
  %208 = load i32, i32* %12, align 4
  %209 = call i32 @memcpy(i8* %202, i8* %207, i32 %208)
  %210 = load i32, i32* %12, align 4
  %211 = load i32, i32* %9, align 4
  %212 = add nsw i32 %211, %210
  store i32 %212, i32* %9, align 4
  br label %213

213:                                              ; preds = %184, %59
  br label %214

214:                                              ; preds = %213
  %215 = load i32, i32* %10, align 4
  %216 = add nsw i32 %215, 1
  store i32 %216, i32* %10, align 4
  br label %13

217:                                              ; preds = %27
  %218 = load i8*, i8** %7, align 8
  %219 = icmp ne i8* %218, null
  br i1 %219, label %220, label %223

220:                                              ; preds = %217
  %221 = load i32, i32* %8, align 4
  %222 = load i32*, i32** %4, align 8
  store i32 %221, i32* %222, align 4
  br label %223

223:                                              ; preds = %220, %217
  %224 = load i8*, i8** %7, align 8
  ret i8* %224
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i8* @realloc(i8*, i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
